--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@ document.head.appendChild(style);
 
     // Add the footer text that moves with the page (scroll responsive)
     const footerText = document.createElement('div');
-    footerText.textContent = "Developed by MMD; All Rights Reserved, 2025";
+    footerText.textContent = "Developed by Mriganka Mohan Das; All Rights Reserved, 2025";
     footerText.style.cssText = `
         position: relative;
         margin-top: 20px;  /* Ensure it's placed at the bottom of the content */
