--- a/main.html
+++ b/main.html
@@ -71,6 +71,7 @@ overflow: auto;
 	    position: relative;
             max-width: 1400px;
             margin: 0 auto;
+		color: navy;
             padding: 30px;
             border: 2px solid #ccc;
             border-radius: 10px;
