--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div class="dynamic-background"></div>
 
     <div id="login-page">
-        <h1 id="main-header">Login to Your Account</h1>
+        <h1 id="main-header">Lottery Machine</h1>
         <div id="login-box">
             <h2>Enter Credentials</h2>
             <input type="text" id="username" placeholder="Username" required><br><br>
