--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page (Lottery Machine)</title>
+    <title>Lottery Machine by MMD</title>
     <script>
         // Function to log out and return to the login page
         function logout() {
@@ -1216,7 +1216,7 @@ document.head.appendChild(style);
 
     // Add the footer text that moves with the page (scroll responsive)
     const footerText = document.createElement('div');
-    footerText.textContent = "Developed by MMD; All Rights Reserved, 2025";
+    footerText.textContent = "Developed by Mriganka Mohan Das; All Rights Reserved, 2025";
     footerText.style.cssText = `
         position: relative;
         margin-top: 20px;  /* Ensure it's placed at the bottom of the content */
