--- a/main.html
+++ b/main.html
@@ -331,7 +331,7 @@ button#saveName:focus {
             <button id="reset">Reset</button>
             <button id="download">Download Lottery Details</button>
         </div>
-        <div><p><strong>Result:  </strong><span id="result">   -  </span></p></div>
+        <div><p><strong>Picked Number:  </strong><span id="result">   -  </span></p></div>
         <div class="picked-numbers" id="pickedNumbers">Picked Numbers: </div>
     </div>
 
