--- a/main.html
+++ b/main.html
@@ -332,7 +332,7 @@ button#saveName:focus {
             <button id="download">Download Lottery Details</button>
         </div>
         <div><p><strong>Picked Number:  </strong><span id="result">   -  </span></p></div>
-        <div class="picked-numbers" id="pickedNumbers">Picked Numbers: </div>
+        <div class="picked-numbers" id="pickedNumbers">Result: </div>
     </div>
 
 
